# tde-easy-projector

./: CMakeL10n.txt  CMakeLists.txt  ConfigureChecks.cmake  README.md
data/: CMakeLists.txt
src/: CMakeL10n.txt  CMakeLists.txt  bigbutton.cpp  bigbutton.h  biglabel.cpp  biglabel.h  dialog.cpp  dialog.h  easyprojector.cpp  easyprojector.h  main.cpp  tdeeasyprojector.desktop
translations/messages/: ru.po  tdeeasyprojector.pot
